Js works and updated design

--- a/index.html
+++ b/index.html
@@ -20,24 +20,28 @@
 		</header>
 		<section class="inputs">
 		<h3>Wpisz datę urodzenia lub kliknij na odpowiedni obrazek</h3>
-		<input type="text" placeholder="dzień">
-		<input type="text" placeholder="miesiąc">
-		<input type="button" value="Sprawdź">
+		<input id="day" type="number" placeholder="dzień">
+		<input id="month" type="number" placeholder="miesiąc">
+		<input id="check" type="button" value="Sprawdź">
+		</section>
+		<section class="opis">
+			<h2 class="znak"></h2>
+			<p class="horoskop"></p>
 		</section>
 		<section class="images">
-			<ul>
-				<li><img src="img/capricorn.png" alt="Koziorożec"></li>
-				<li><img src="img/aquarius.png" alt="Wodnik"></li>
-				<li><img src="img/pisces.png" alt="Ryby"></li>
-				<li><img src="img/aries.png" alt="Baran"></li>
-				<li><img src="img/taurus.png" alt="Byk"></li>
-				<li><img src="img/gemini.png" alt="Bliźnięta"></li>
-				<li><img src="img/cancer.png" alt="Rak"></li>
-				<li><img src="img/leo.png" alt="Lew"></li>
-				<li><img src="img/virgo.png" alt="Panna"></li>
-				<li><img src="img/libra.png" alt="Waga"></li>
-				<li><img src="img/scorpio.png" alt="Skorpion"></li>
-				<li><img src="img/sagittarius.png" alt="Strzelec"></li>
+			<ul class="list">
+				<li><img id ='koziorożec' src="img/capricorn.png" alt="Koziorożec"></li>
+				<li><img id ='wodnik' src="img/aquarius.png" alt="Wodnik"></li>
+				<li><img id ='ryby' src="img/pisces.png" alt="Ryby"></li>
+				<li><img id ='baran' src="img/aries.png" alt="Baran"></li>
+				<li><img id ='byk' src="img/taurus.png" alt="Byk"></li>
+				<li><img id ='bliźnięta' src="img/gemini.png" alt="Bliźnięta"></li>
+				<li><img id ='rak' src="img/cancer.png" alt="Rak"></li>
+				<li><img id ='lew' src="img/leo.png" alt="Lew"></li>
+				<li><img id ='panna' src="img/virgo.png" alt="Panna"></li>
+				<li><img id ='waga' src="img/libra.png" alt="Waga"></li>
+				<li><img id ='skorpion' src="img/scorpio.png" alt="Skorpion"></li>
+				<li><img id ='strzelec' src="img/sagittarius.png" alt="Strzelec"></li>
 			</ul>
 		</section>
 
