Added return button

--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
 				<li><img id ='strzelec' src="img/sagittarius.png" alt="Strzelec"></li>
 			</ul>
 		</section>
+		<section class="back">
+			<input class='hidden' id="powrót" type="button" value="Powrót">
+		</section>>
 
 		<script type="text/javascript" src="js/main.js"></script>
 	</body>
